--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "app04",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://dnisaev.github.io/homework00",
+  "homepage": "https://dnisaev.github.io/sandbox",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
